style top and bottom banners

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Space Ripples Reveal Big Bang's Smoking Gun - The New York Times</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap"> 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
@@ -11,10 +12,10 @@
     <nav class="top">
       <img src="images/search-icon.png" alt="hamburger-button">
       <img src="images/hamburger-button.png" alt="search-icon">
-      <div>Space & cosmos</div>
-      <div>The New York Times</div>
-      <button>Subscribe Now</button>
-      <button>Log In</button>
+      <a class="space-cosmos" href="link.html">Space & cosmos</a>
+      <a class="nytimes" href="link.html">The New York Times</a>
+      <button class="subscribe" type="button">Subscribe Now</button>
+      <button class="login" type="button">Log In</button>
     </nav>
 
     <main>
@@ -307,7 +308,8 @@
     </main>
 
     <div class="account">
-      Access more of The Times by creating a free account or loggin in.
+      <div class="description">Access more of The Times by creating a free account or loggin in.</div>
+      <a class="expand" href="link.html">Expand<span>&#9650;</span></a>
     </div>   
   </body>
 </html>
