--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
           <h1>Space Ripples Reveal Big Bang's Smoking Gun</h1>
           
           <figure class="image">
-            <img src="" alt="Alan Guth posing next to a giant parabolic antenna">
-            <figcaption>
+            <img src="images/alan-guth.webp" alt="Alan Guth posing next to a giant parabolic antenna">
+            <figcaption class="caption">
               Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago. 
               <span class="credit">Rick Friedman for The New York Times</span>
             </figcaption>
           </figure>
 
-          <h5>By Dennis Overbye</h5>
+          <h5>By <a href="link.html">Dennis Overbye</a></h5>
 
-          <div>
+          <div class="date-links">
             <h6>March 17, 2014</h6>
-            <a href="link.html">&#9737;</a>
-            <a href="link.html">&#9737;</a>
-            <a href="link.html">&#9737;</a>
-            <a href="link.html">&#9737;</a>
-            <a href="link.html">&#9737;</a>
+            <a class="social-media" href="link.html">&#9737;</a>
+            <a class="social-media" href="link.html">&#9737;</a>
+            <a class="social-media" href="link.html">&#9737;</a>
+            <a class="social-media" href="link.html">&#9737;</a>
+            <a class="social-media" href="link.html">&#9737;</a>
             <a href="link.html">615</a>
           </div>
         </header>
 
-        <section>
+        <section class="content">
           <p>
             CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.
             He was trying to understand why there was no trace of some exotic particles that should have been created in the Big Bang. Instead he discovered what might have made the universe bang to begin with. A potential hitch in the presumed course of cosmic evolution could have infused space itself with a special energy that exerted a repulsive force, causing the universe to swell faster than the speed of light for a prodigiously violent instant.
@@ -53,34 +53,35 @@
           </p>
           <p>
             On Monday, Dr. Guth’s starship came in. Radio astronomers reported that they had seen the beginning of the Big Bang, and that his hypothesis, known undramatically as inflation, looked right.
-            Reaching back across 13.8 billion years to the first sliver of cosmic time with telescopes at the South Pole, a team of astronomers led by John M. Kovac of the Harvard-Smithsonian Center for Astrophysics detected ripples in the fabric of space-time — so-called gravitational waves — the signature of a universe being wrenched violently apart when it was roughly a trillionth of a trillionth of a trillionth of a second old. They are the long-sought smoking-gun evidence of inflation, proof, Dr. Kovac and his colleagues say, that Dr. Guth was correct.
+            Reaching back across 13.8 billion years to <a href="link.html">the first sliver of cosmic time</a> with telescopes at the South Pole, a team of astronomers led by John M. Kovac of the Harvard-Smithsonian Center for Astrophysics detected ripples in the fabric of space-time — so-called <a href="link.html">gravitational waves</a> — the signature of a universe being wrenched violently apart when it was roughly a trillionth of a trillionth of a trillionth of a second old. They are the long-sought smoking-gun evidence of inflation, proof, Dr. Kovac and his colleagues say, that Dr. Guth was correct.
           </p>
 
-          <div>
-            Unlock more free articles.
-            <br><a href="link.html">Create an account or log in</a>
-          </div>
-
-          <aside class="editors-picks">
+          <aside class="side">
+            <h4>Editors' Picks</h4>
             <figure class="image">
-              <img src="" alt="a couple wedding in what seems to be Gibraltar">
+              <img src="images/gibraltar.webp" alt="a couple wedding in what seems to be Gibraltar">
               <figcaption>
                 How Gibraltar Became Europe’s Pandemic Wedding Hot Spot
               </figcaption>
             </figure>
             <figure class="image">
-              <img src="" alt="two guys and three dogs">
+              <img src="images/guys-and-dogs.webp" alt="two guys and three dogs">
               <figcaption>
                 Fleeing the Suburbs for the City? This Couple Was Ready for Some Amenities
               </figcaption>
             </figure>
             <figure class="image">
-              <img src="" alt="artistic drawing about music">
+              <img src="images/music.webp" alt="artistic drawing about music">
               <figcaption>
                 Musicians on How to Bring Racial Equity to Auditions
               </figcaption>
             </figure>
           </aside>
+
+          <div class="subscribe">
+            Thanks for reading The Times.
+            <br><a href="link.html">Subscribe to The Times</a>
+          </div>
 
           <p>
             Inflation has been the workhorse of cosmology for 35 years, though many, including Dr. Guth, wondered whether it could ever be proved.
@@ -100,10 +101,11 @@
 
           <div class="graphic">
             <h3>The Theory of Inflation</h3>
-            <p>
+            <p class="intro">
               Astronomers have found evidence to support the theory of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.
             </p>
-            <div>
+            <div class="graphic-image">
+              <div class="empty"></div>
               <div class="inflation">
                 <strong>THE UNIVERSE</strong>  is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.
               </div>
@@ -116,6 +118,7 @@
               <div class="inflation">
                 <strong>COFFEE EVERYWHERE</strong>  Now turn around and look a mile in the other direction. You see a similar coffee cup, at exactly the same temperature. Coincidence? Maybe. But if you see a similar cup in every direction, you might want to look for another explanation.
               </div>
+              <div class="empty"></div>
               <div class="inflation">
                 <strong>STILL NOT ENOUGH TIME</strong>  There has not been enough time to carry coffee cups from place to place before they get cold. But if all the coffee cups were somehow filled from a single coffee pot, all at the same time, that might explain their even temperature.
               </div>
@@ -129,7 +132,7 @@
                 <strong>EXPANSION</strong>  Returning to our coffee, imagine a single, central pot expanding faster than light and cooling to an even temperature as it expands. That is something like inflation. And the structure of the universe mirrors the froth and foam of the original pot.
               </div>
             </div>
-            <p>
+            <p class="authors">
               By LARRY BUCHANAN and JONATHAN CORUM
             </p>
           </div>
@@ -145,12 +148,12 @@
             Andrei Linde of Stanford, a prolific theorist who first described the most popular variant of inflation, known as chaotic inflation, in 1983, was about to go on vacation in the Caribbean last week when Chao-Lin Kuo, a Stanford colleague and a member of Dr. Kovac’s team, <a href="link.html">knocked on his door with a bottle of Champagne</a> to tell him the news.
           </p>
 
-          <div>
-            <iframe></iframe>
-            <p>
+          <div class="video">
+            <iframe width="600" height="320" src="https://www.youtube.com/embed/ZlfIVEy_YOA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="caption">
               Stanford Professor Andrei Linde celebrates physics breakthrough
               <span class="credit">Video by StanfordUniversity</span>
-            </p>
+            </div>
           </div>
 
           <p>
@@ -177,8 +180,8 @@
           </p>
 
           <figure class="image">
-            <img src="" alt="the Bicep2 telescope, somewhere in the South Pole">
-            <figcaption>
+            <img src="images/bicep2.webp" alt="the Bicep2 telescope, somewhere in the South Pole">
+            <figcaption class="caption">
               The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth.
               <span class="credit">Steffen Richter/Associated Press</span>
             </figcaption>
@@ -221,15 +224,15 @@
         </div>
 
         <div class="bottom-links">
-          <span>READ 15 COMMENTS</span>
-          <a href="link.html">&#9737;</a>
-          <a href="link.html">&#9737;</a>
-          <a href="link.html">&#9737;</a>
-          <a href="link.html">&#9737;</a>
+          <span><button class="comments" type="button">READ 615 COMMENTS</button></span>
+          <a class="social-media" href="link.html">&#9737;</a>
+          <a class="social-media" href="link.html">&#9737;</a>
+          <a class="social-media" href="link.html">&#9737;</a>
+          <a class="social-media" href="link.html">&#9737;</a>
         </div>
       </article>
 
-      <aside>
+      <aside class="bottom">
         <div class="more">
           <h4>More in Space and Astronomy</h4>
           <figure class="image">
