--- a/index.html
+++ b/index.html
@@ -236,67 +236,77 @@
         <div class="more">
           <h4>More in Space and Astronomy</h4>
           <figure class="image">
-            <img src="" alt="">
-            <figcaption>
-
-            </figcaption>
+            <img src="images/sun.webp" alt="">
+            <figcaption></figcaption>
+            <p>A Solar Forecast With Good News for Civilization as We Know It</p>
+            <p class="date">Sept. 15</p>
           </figure>
           <figure class="image">
-            <img src="" alt="">
-            <figcaption>
-
-            </figcaption>
+            <img src="images/venus.webp" alt="">
+            <figcaption>PLANET-C Project Team/JAXA</figcaption>
+            <p>Life on Venus? Astronomers See a Signal in Its Clouds</p>
+            <p class="date">Sept. 15</p>
           </figure>
           <figure class="image">
-            <img src="" alt="">
-            <figcaption>
-
-            </figcaption>
+            <img src="images/rocket-launch.webp" alt="">
+            <figcaption>Kieran Fanning/Rocket Lab</figcaption>
+            <p>The Search for Life on Venus Could Start With This Private Company</p>
+            <p class="date">Sept. 15</p>
           </figure>
           <figure class="image">
-            <img src="" alt="">
-            <figcaption>
-
-            </figcaption>
+            <img src="images/missions-to-venus.webp" alt="">
+            <figcaption>Paul Hudson/NASA</figcaption>
+            <p>Missions to Venus: Highlights From History, and When We May Go Back</p>
+            <p class="date">Sept. 15</p>
           </figure>
           <figure class="image">
-            <img src="" alt="">
-            <figcaption>
-
-            </figcaption>
+            <img src="images/stars.webp" alt="">
+            <figcaption>Hildegard Burri-Bayer</figcaption>
+            <p>How Old Is This Ancient Vision of the Stars?</p>
+            <p class="date">Sept. 13</p>
           </figure>
           <figure class="image">
-            <img src="" alt="">
-            <figcaption>
-
-            </figcaption>
+            <img src="images/black-hole.jpg" alt="">
+            <figcaption>R. Hurt/Calltech/IPAC, via Reuters</figcaption>
+            <p>Is There a Black Hole in Our Backyard?</p>
+            <p class="date">Sept. 11</p>
           </figure>
-        </div>
-
-        <div class="most-popular">
-          <h4>Most Popular</h4>
         </div>
 
         <div class="editors-picks">
           <h4>Editors' Picks</h4>
           <figure class="image">
-            <img src="" alt="">
-            <figcaption>
-
-            </figcaption>
+            <img src="images/park.webp" alt="">
+            <figcaption></figcaption>
+            <p>‘I Was Enjoying Dinner Alone on My Favorite Boulder in St. Nicholas Park’</p>
+            <p class="date">Sept. 13</p>
           </figure>
           <figure class="image">
-            <img src="" alt="">
-            <figcaption>
-
-            </figcaption>
+            <img src="images/bar.webp" alt="">
+            <figcaption>Fergus McGinn</figcaption>
+            <p>A Man, a Pint and a Timer Become Symbols of Ireland’s Pandemic Rules</p>
+            <p class="date">Sept. 10</p>
           </figure>
           <figure class="image">
-            <img src="" alt="">
-            <figcaption>
-
-            </figcaption>
+            <img src="images/gender-reveal.webp" alt="">
+            <figcaption></figcaption>
+            <p>Are Gender Reveals Cursed?</p>
+            <p class="date">Sept. 10</p>
           </figure>
+        </div>
+
+        <div class="most-popular">
+          <h4>Most Popular</h4>
+          <p>Trump Gets ‘Fox & Friend-Zoned’</p>
+          <p>‘I Discovered the Body’: South Dakota’s Attorney General Offers New Crash Details</p>
+          <p>How Carla Bruni-Sarkozy Has Perfected Zoom Lighting</p>
+          <p>Opinion: In Two Phone Calls, I Learned Just Who Counts in New York</p>
+          <p>Opinion: Stop Expecting Life to Go Back to Normal Next Year</p>
+          <p>Columbia Marching Band Shuts Itself Down Over ‘Offensive Behavior’</p>
+          <p>Trump Defends Indoor Rally, but Aides Express Concern</p>
+          <p>Opinion: Trump’s Perverse Campaign Strategy</p>
+          <p>Opinion: Whose America Is It?</p>
+          <p>Let the Flavors Do the Work</p>
         </div>
       </aside>
 
