--- a/index.html
+++ b/index.html
@@ -312,10 +312,124 @@
 
       <footer>
         <nav class="category">
-          The New York Times
+          <div class="heading">
+            <a class="nytimes" href="link.html">The New York Times</a>
+            <a class="home" href="link.html">Go to Home Page »</a>
+          </div>
+          <ul class="categories">
+            <li class="category-title">News
+              <ul class="category-list">
+                <li><a href="link.html">Home Page</a></li>
+                <li><a href="link.html">World</a></li>
+                <li><a href="link.html">U.S.</a></li>
+                <li><a href="link.html">Politics</a></li>
+                <li><a href="link.html">Election 2020</a></li>
+                <li><a href="link.html">New York</a></li>
+                <li><a href="link.html">Business</a></li>
+                <li><a href="link.html">Tech</a></li>
+                <li><a href="link.html">Science</a></li>
+                <li><a href="link.html">Sports</a></li>
+                <li><a href="link.html">Obituaries</a></li>
+                <li><a href="link.html">Today's Paper</a></li>
+                <li><a href="link.html">Corrections</a></li>
+              </ul>
+            </li>
+            <li class="category-title">Opinion
+              <ul class="category-list">
+                <li><a href="link.html">Today's Opinion</a></li>
+                <li><a href="link.html">Op-Ed Columnists</a></li>
+                <li><a href="link.html">Editorials</a></li>
+                <li><a href="link.html">Op-Ed Contributors</a></li>
+                <li><a href="link.html">Letters</a></li>
+                <li><a href="link.html">Sunday Review</a></li>
+                <li><a href="link.html">Video: Opinion</a></li>
+              </ul>
+            </li>
+            <li class="category-title">Arts
+              <ul class="category-list">
+                <li><a href="link.html">Today's Arts</a></li>
+                <li><a href="link.html">Art & Design</a></li>
+                <li><a href="link.html">Books</a></li>
+                <li><a href="link.html">Dance</a></li>
+                <li><a href="link.html">Movies</a></li>
+                <li><a href="link.html">Music</a></li>
+                <li><a href="link.html">Pop Culture</a></li>
+                <li><a href="link.html">Television</a></li>
+                <li><a href="link.html">Theater</a></li>
+                <li><a href="link.html">Video: Arts</a></li>
+              </ul>
+            </li>
+            <li class="category-title">Living
+              <ul class="category-list">
+                <li><a href="link.html">At Home</a></li>
+                <li><a href="link.html">Automobiles</a></li>
+                <li><a href="link.html">Games</a></li>
+                <li><a href="link.html">Education</a></li>
+                <li><a href="link.html">Food</a></li>
+                <li><a href="link.html">Health</a></li>
+                <li><a href="link.html">Jobs</a></li>
+                <li><a href="link.html">Love</a></li>
+                <li><a href="link.html">Magazine</a></li>
+                <li><a href="link.html">Parenting</a></li>
+                <li><a href="link.html">Real Estate</a></li>
+                <li><a href="link.html">Recipes</a></li>
+                <li><a href="link.html">Style</a></li>
+                <li><a href="link.html">T Magazine</a></li>
+                <li><a href="link.html">Travel</a></li>
+              </ul>
+            </li>
+            <li class="category-title">More
+              <ul class="category-list">
+                <li><a href="link.html">Reader Center</a></li>
+                <li><a href="link.html">Wirecutter</a></li>
+                <li><a href="link.html">Live Events</a></li>
+                <li><a href="link.html">The Learning Network</a></li>
+                <li><a href="link.html">Tools & Services</a></li>
+                <li><a href="link.html">Multimedia</a></li>
+                <li><a href="link.html">Photography</a></li>
+                <li><a href="link.html">Video</a></li>
+                <li><a href="link.html">Newsletters</a></li>
+                <li><a href="link.html">TimesMachine</a></li>
+                <li><a href="link.html">NYT Store</a></li>
+                <li><a href="link.html">Times Journeys</a></li>
+                <li><a href="link.html">Manage My Account</a></li>
+              </ul>
+            </li>
+            <li class="category-title">Subscribe
+              <ul class="subscribe">
+                <li><a href="link.html">&#9737; Home Delivery</a></li>
+                <li><a href="link.html">&#9737; Digital Subscriptions</a></li>
+                <li><a href="link.html">&#9737; Games</a></li>
+                <li><a href="link.html">&#9737; Cooking</a></li>
+              </ul>
+              <ul class="other">
+                <li><a href="link.html">Email Newsletters</a></li>
+                <li><a href="link.html">Corporate Subscriptions</a></li>
+                <li><a href="link.html">Education Rate</a></li>
+                <li><a href="link.html">Mobile Applications</a></li>
+                <li><a href="link.html">Replica Edition</a></li>
+                <li><a href="link.html">Español</a></li>
+                <li><a href="link.html">中文网</a></li>
+              </ul>
+            </li>
+          </ul>
         </nav>
-        <nav class="bottom">
-          Contact Us
+        <nav class="bottom-nav">
+          <ul>
+            <li><a href="link.html">© 2020 The New York Times Company</a></li>
+            <li><a href="link.html">NYTCo</a></li>
+            <li><a href="link.html">Contact Us</a></li>
+            <li><a href="link.html">Work with us</a></li>
+            <li><a href="link.html">Advertise</a></li>
+            <li><a href="link.html">T Brand Studio</a></li>
+            <li><a href="link.html">Your Ad Choices</a></li>
+            <li><a href="link.html">Privacy</a></li>
+            <li><a href="link.html">Terms of Service</a></li>
+            <li><a href="link.html">Terms of Sale</a></li>
+            <li><a href="link.html">Site Map</a></li>
+            <li><a href="link.html">Help</a></li>
+            <li><a href="link.html">Subscriptions</a></li>
+          </ul>
         </nav>
       </footer>
     </main>
